--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
+body{
+  
+  background: #0f2027; /* fallback for old browsers */
+  background: linear-gradient(to right,#2c5364,#203a43, #0f2027);
+  color: #fff;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ 
+	width: 100%;
   align-items: center;
+  background-image: url('../public/fondodos.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container{
+  box-sizing: border-box;
+  max-width: 1040px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  text-shadow: 0 0 10px #fffbfd , 0 0 20px #fffeffa9 , 0 0 30px rgb(255, 255, 255) , 0 0 40px #e90065 , 0 0 50px #e90065 , 0 0 90px #e90065 , 0 0 100px #e90065 ;
+  
+  
+}
+.row{
+  display: flex;
+}
+
+
+
+input{
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+  font-size: 1.2rem;
+	margin: 0 auto;
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 90%;
+  display: block;
+  border-bottom: 0.3rem solid transparent;
+  transition: all 0.3s;
+}
+input:focus{
+  outline: none;
+}
+
+.container:hover{
+  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
+}
+
+.card{
+  
+  margin-top: 0px;
+  margin-bottom: 100px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.card-container{
+  margin: 20px 5px;
+  border-radius: 20px;
+  
+  width: 470px;
+  height: 600px;
+  margin-bottom: 30px;
+  
+  box-shadow: 0px 0px 25px 1px rgb(50, 50, 50, 0.1);
+  background-image: url('../public/fondodos.jpg');
+  background-repeat: no-repeat;
+  background-size:cover;
+}
+.city-name {    
+  font-weight:700;
+  font-size:50px;
+  color: #f3f1f1;
+  bottom: 0;    
+  text-decoration: underline;
+}
+.icon {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  bottom: 280px;
+  float:right;
+  margin: 5px 5px 0 0;    
+}
+.temp {
+  position: relative;
+  font-weight:700;
+  font-size:80px;
+  color:#ffffff ;        
+  right: 120px;
+}
+.card-footer {
+  background-color: #462e64;     
+  color: aliceblue;                
+  position:relative;
+  bottom: 260px;
+  /* left: 0px; */
+  /*border-radius: 0px 0px 20px 20px;  */      
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.temp-max-min {    
+  font-weight:500;
+  font-size:50px;
+  color: aliceblue;    
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-footer-dos{
+  background-color: #53225f;     
+  color: aliceblue;                
+  position:relative;
+  bottom: 280px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* left: 0px; */
+  border-radius: 0px 0px 20px 20px;        
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 120px;
+  
+}
+.footer-dos{
+  width: 100%;
+  font-size:20px;
+  height: 10px;
 }
